style.css
/*
Theme Name: Coffee Cart
Theme URI: http://www.averykushner.com
Description: A post modern, charming coffee cart theme
Version: 1
Author: Avery Kushner
Author URI: http://www.averykushner.com
*/

/********* Platform Independent Styles ********/

    /** Header Styles **/

    header{

      color: white;
      
    }

    #header-h1{

      display: none;
      
    }

    h1{

      font-size: 40px;
    }

    h2{

      visibility: hidden;
      
    }

    .bhn-logo{

      margin: auto;
      display: block;
      width: 40%;
      height: auto;

    }

    .custom{

      margin: auto;
      display: block;
      width: 40%;

    }

    #header-image-name {

      background-color:firebrick;
      box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.3);
      padding-bottom: 5px;

    }

    #toggle-nav{

      display: none;

    }

    nav ul{

      box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.3);
    }

    nav .sub-menu{

      display: none;
      

    }

    nav .sub-menu li{

      margin: 0;

    }

    nav .sub-menu li a{

      padding-left: 0px;
      text-align: left;

    }

    nav ul li:hover > ul{

      display: block;
    }

    /** END Header Styles **/

    /** NON FRONT Header Styles **/

    header.sticky{

      color: white;
      position: fixed;
      top: 0;
      width: 100%;
      margin-bottom: 10px;
      
    }

    #header-h1{

      display: none;
      
    }

    h1{

      font-size: 40px;
    }

    h2{

      visibility: hidden;
      
    }

    #non-front-header-image-name {

      background-color:firebrick;
      box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.3);
      padding-bottom: 1px;
      height: 40px;

    }

    .non-front-bhn-logo{

      margin: auto;
      display: block;
      width: auto;
      height: 40px;

    }

    #toggle-nav{

      display: none;

    }

    nav ul{

      box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.3);
    }

    #non-front-wrapper{

      margin-top: 100px;

    }

    /** END NON FRONT Header Styles **/


    /** Main Styles **/

    body {
      font-family: 'Raleway', "Open Sans", sans-serif;
      font-weight: 100;
      background-color: #f6f6f6;
      
    }

    .wrapper{

      display: flex;
      flex-direction: row;
      padding-bottom: 180px;
      margin-bottom: 50px;

    }

    h1{

      font-size: 50px;
      font-weight: 200;

    }

    #hours{

      margin: auto;
      text-align: center;
      width: 70%;
      margin-top: 69px;
      box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.3);
      padding: 10px;
      padding-top: 40px;
      padding-bottom: 40px;
      color: firebrick;
      font-size: 30px;

    }

    #slogan{

      margin-top: 40px;
      text-align: center;
      font-size: 25px;

    }

      /** Article Styles **/

      .posts{

        display: flex;
        flex-wrap: wrap;
        flex-direction: row;
        justify-content: space-between;
      
      }

      .post{

        padding: 20px;
        padding-top: 10px;
        box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.3);
        margin: auto;
        margin-top: 5%;
        background-color:#ffffff;
        width: 25%;
      }

      .post:hover{

        position: relative;
        top: 5px;

      }

      .post img{

        width: 100%;
        height: 100%;

      }

      .post h4{

        font-size: 30px;
        text-align: center;
    
      }
      .post h4:hover{

        border-bottom: 1px solid firebrick;

      }

      /** END Article Styles **/

    /** END Main Styles **/


    /*Front page styles*/

    .front-blog-posts{
      margin-bottom: 50px;
    }

    /* END Front page styles*/


    /** Footer Styles **/

    footer {

        /*position: relative;
        right: 0;
        bottom: 0;
        left: 0;
        width: 100%;
        min-height: 70px;
        height: auto !important;
        height:70px;*/

        position: relative;
        bottom: 0px;
        margin-top: 400px;
        margin-bottom: 0px;
        height: 180px;
        clear:both;
        background-color:#272822;
        color: white;
        text-align: center;
      
      }

    footer p{

      position: relative;
      top: 20px;
      font-size: 14px;
      padding-top: 20px;

    }

    #phone-number{

      margin-top: 0px;
      padding-bottom: 5px;

    }

    /** END Footer Styles **/

    /** SIDE-BAR STYLES **/

    .sidebar{

      padding-top: 20px;

    }

    .sidebar a{

      text-decoration: none;
      color: firebrick;

    }

    .sidebar h4{
      
      font-size: 18px;

    }

    .sidebar h2{

      visibility: visible;


    }

    .blog-post-title a{
      text-decoration: none;
      color: firebrick;
      font-weight: 100;

    }


    /** Blog styles **/

    #blog-header{

      text-align: center;
    }

    p.excerpt{

      font-size: 20px;

    }
    /** END Blog styles **/

    /** POST styles **/
    .wrapper-single{
      display: flex;
      flex-direction: row;
      flex-wrap: wrap;
      justify-content: space-between;
      padding-bottom: 180px;
      margin-bottom: 50px;
    }

    .single-post img{

      width: auto;
      height: auto;
      max-width: 85%;

    }

    .single-post{
      box-shadow: none;
      width: 70%;
      margin: auto;
      padding-right: 20px;
      float: right;

    }

    h2.post-heading{

      visibility: visible;

    }
    /** END POST styles **/

    /** AUTHOR STYLES **/

    .post-meta{

      list-style-type: none;
      /*background: rgba(0, 0, 0, 0.1);*/

    }

    .post-meta a{

      text-decoration: none;
      color: firebrick;

    }

    .post-meta li{

      display: inline-block;

    }

    .post-meta img{

      height: auto;
      width: auto;

    }

    /** END AUTHOR STYLES **/

    /** DEFAULT PAGE STYLES **/

    div.default-page-content{

      margin: auto;
      width: 70%;

    }

    div.default-page-inner-content{

      display: flex;
      flex-direction: row;

    }

    div.default-page-the_content_wrapper{

      float: left;

    }

    div.default-page-img-container{

      display: inline-block;
      float: right;

    }


    /** END DEFAULT PAGE STYLES **/

    /** ABOUT PAGE STYLES **/

      div.about-page-content{

      margin: auto;
      width: 70%;

    }

/*    div.about-page-inner-content{

      display: flex;
      flex-direction: row;

    }*/

    div.about-page-the_content_wrapper{

      font-size: 25px;

    }

    div.about-page-img-container{

      display: inline-block;
      width: 40%;
      float: left;
      margin: 10px;

    }

    div.about-page-img-container img{

      border-radius: 5px;
      height: auto;
      width: 100%;

    }


    /** END ABOUT PAGE STYLES **/


    /** CONTACT PAGE STYLES **/

    div.contact-content p{

      font-size: 25px;
      padding: 1%;
      margin: auto;
      text-align: center;

    }

    /** END CONTACT PAGE STYLES **/


/********* END Platform Independent Styles ********/


/*************** MOBILE STYLES *******************/

@media screen and (max-width: 860px){

  /** Nav Styles **/
    
    nav{

      width: 100%;
      z-index: 100;

    }

    nav ul{
      width: 70%;
      list-style-type: none;
      display: inline-block;
      padding-left: 0px;
      padding-top: 0px;
      margin-top: 8px;
      z-index: 100;
    }

    nav ul li{
      margin: 1px;
    }

    nav ul li a{
      color: white;
      text-decoration: none;
      background-color:#272822;
      display: block;
      padding: 5px;
      text-align: center;
      padding-top: 10px;

    }

    nav ul li a:hover{
      background-color:dimgray;
      
    }

    #toggle-nav{
      text-decoration: none;
      display: inline-block;
      float: left;
      font-size:35px;
      margin-right: 0px;
      margin-top: 3px;
      color: firebrick;
      background-color: black;
      padding: 3px;
      padding-left: 5px;
      padding-right: 5px;
      border-radius: 3px;
    }

    #toggle-nav:hover{

      color: dimgray;

    }

    .menu ul.active {
        display:none;
    }

    nav .sub-menu{

      display: none;
      

    }

    nav .sub-menu li{

      margin: 0;

    }

    nav .sub-menu li a{

      padding-left: 0px;
      text-align: left;

    }

    nav ul li:hover > ul{

      display: block;
    }

    /** END Nav Styles **/

    /** CONTACT PAGE STYLES */

    div.contact-content p{

      font-size: 20px;

    }

    /** END CONTACT PAGE STYLES */

    /** ABOUT PAGE STYLES */

    div.about-page-the_content_wrapper p{

      font-size: 18px;

    }

    /** END ABOUT PAGE STYLES */

    /** SIDE-BAR STYLES */

    .wrapper-single{

      display: block;
    }

    .single-post{

      float: none;

    }

    .sidebar{

      width: 100%;
    }


    /** END SIDE-BAR STYLES */

    /**** BLOG STYLES *****/

    .post{

      width: 100%;

    }

}

/*************** Desktop STYLES *******************/

@media screen and (min-width: 861px){

  nav{

    width: 100%;
    margin: auto;

  }

  nav ul{
    display: flex;
    flex-direction: row;
    justify-content: flex-start;
    list-style-type: none;
    width: 95%;
    min-height: 40px;
    height: auto;
    background-color: black;
    border-radius: 3px;
    margin-top: 2px;

  }

  nav ul li{
    margin-right: 7%;
    margin-bottom: 0px;
    padding-top: 10px;

    }

    nav ul li a{
      color: white;
      text-decoration: none;
      display: block;
      text-align: center;
      font-size: 20px;


    }

    nav ul li a:hover{
      color:firebrick;
      
    }

}

